# JUNO

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: données.txt  fig_2_6.txt
include/: fonctions.h  plotter.h
results/: cross.txt  flux_PU_239.txt  flux_PU_241.txt  flux_U_235.txt  flux_U_238.txt  flux_cross_U_235.txt  flux_cross_total.txt  spectra_IH.txt  spectra_NH.txt  spectra_initial.txt  spectra_p21.txt
src/: fonctions.cpp  main.cpp  plotter.cpp  plotter_flux.C  plotter_spectra.C  tmp.txt
